Fix navbar z-index issue

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
   position: fixed;
   font-size: 1.7rem;
   width: 100%;
-  z-index: 6;
+  z-index: 60;
   background-color: rgba($color: #000000, $alpha: 0.85);
   transition: 0.5s;
 
